# mm2

./: .gitignore
lab1/: CMakeLists.txt  makefile
lab1/include/: balance.hpp  tma.hpp  utils.hpp
lab1/include/utils/: balance_utils.hpp  data.hpp  grid.hpp
lab1/src/: data_table.hpp  main.cpp
lab1/test/: test_tma.cpp  test_utils.hpp
lab2/: CMakeLists.txt
lab2/include/: euler.cpp  euler.hpp  utils.hpp
lab2/include/utils/: balance_utils.hpp  data.hpp  grid.hpp
lab2/src/: data_table.hpp  main.cpp
report/: document.tex  preamble.tex  titlepage.tex
report/tex/: balance.tex  error.tex  tests.tex
report2/: document.tex  titlepage.tex
report2/tex/: balance.tex  euler.tex  testing.tex
report3/: document.tex  preamble.tex  titlepage.tex
report3/lst/: fake.py  grid.py  linalg.py  main.py  main2.py  model.py  sparse_matrix.py  test.py  test2.py  text.txt  text2.txt  text3.txt  to_table.py  utils.py  viz.py
report3/tex/: balance.tex  discrepancy.tex  eq.tex  message.txt  method.tex  test.tex
